# parquet-file-format

./: .clangd  README.md  run.sh
include/: parser.h
metadata-reader-rs/: Cargo.toml  run.sh
metadata-reader-rs/src/: main.rs  metadata.rs  mod.rs
parser-cpp/: CMakeLists.txt  run.sh
parser-cpp/src/: main.cpp  parser.cpp
src/: main.cpp  parser.cpp
